2006-11-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c: (clutter_stage_realize):
	Set colormap on stage window - should fix issues
	with indirect rendering.

2006-11-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-debug.h:
	Fix small macro typo.

2006-11-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-alpha.c:
	* clutter/clutter-behaviour-opacity.c:
	* clutter/clutter-behaviour-scale.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-feature.c:
	* clutter/clutter-label.c:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-texture.c
	* clutter/clutter-timeline.c:
	* clutter/clutter-debug.h:
	Make CLUTTER_NOTE() just take a string rather than a func.
	Add more default context to output.

	* configure.ac:
	Fix flag and add more help docs for --ebable-debug option.

2006-11-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Add a --g-fatal-warnings switch
	for abort()-ing on warnings and criticals.

2006-11-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Enable debug messages also when
	--enable-debug is set to "minimum".

	* clutter/Makefile.am:
	* clutter/clutter-debug.h: Move all debugging macros inside
	this private header; make all debug macros depend on the
	CLUTTER_ENABLE_DEBUG compile time define, controlled by
	the --enable-debug configure switch; add G_LOG_DOMAIN define.

	* clutter/clutter-main.c: Clean up the debug stuff; add
	command line argument parsing using GOption; the debug
	messages now are triggered like this:

	  CLUTTER_DEBUG=section:section:... clutter-app
	
	or like this:

	  clutter-app --clutter-debug=section:section:...
	
	where "section" is one of the sections listed in clutter-main.c,
	or "all", for all sections; each section is bound to a flag,
	which can be used to define a domain when adding a debug note
	using the CLUTTER_NOTE() macro; the old CLUTTER_DBG() macro is